# zk-controlled-android-app

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/simplewallet/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: IdentityAuth.zkey
app/src/main/cpp/: CMakeLists.txt  simple.cpp
app/src/main/cpp/include/: prover.h  witnesscalc_IdentityAuth.h
app/src/main/java/com/example/simplewallet/: AuthProofInput.kt  BuildConfig.kt  HomeScreen.kt  LogInScreen.kt  MainActivity.kt  SendScreen.kt  SettingsScreen.kt  ZKPUtil.kt  auth.kt  config.kt  helpers.kt  network.kt  state.kt  types.kt  validations.kt
app/src/main/java/com/example/simplewallet/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/simplewallet/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
